--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,30 @@
 {
-    "name": "mean",
-    "version": "1.0.0",
-    "dependencies": {
-        "bootstrap-assets": "2.3.2",
-        "angular": "~1.0.6",
-        "angular-resource": "~1.0.6",
-        "angular-cookies": "~1.0.6",
-        "angular-bootstrap": "~0.4.0",
-        "angular-ui-utils": "0.0.4",
-        "json3": "~3.2.4",
-        "jquery": "~1.9.1"
-    }
+    "name": "ean-boilerplate",
+	"version": "0.1.0",
+	"dependencies": {
+		"angular": "~1.2.0",
+		"angular-animate": "~1.2.0",
+		"angular-route": "~1.2.0",
+		"angular-loader": "~1.2.0",
+		"angular-sanitize": "~1.2.0",
+		"angular-bootstrap": "~0.6.0",
+		"angular-moment": "latest",
+		"angular-translate": "~1.1.0",
+		"angularLocalStorage-nc": "latest",
+		"moment": "latest",
+		"array-sugar": "~0.1",
+		"json3": "~3.2.4",
+		"es5-shim": "~2.0.8",
+		"ng-tools": "latest",
+		"script.js": "latest",
+		"jquery": "~2.0.3",
+		"jquery-ui": "~1.10.3"
+	},
+	"devDependencies": {
+		"angular-mocks": "~1.2.0",
+		"angular-scenario": "~1.2.0"
+	},
+	"resolutions": {
+		"angular": "1.2.0-rc.2"
+	}
 }
