--- a/bower.json
+++ b/bower.json
@@ -1,30 +1,31 @@
 {
-    "name": "ean-boilerplate",
-	"version": "0.1.0",
-	"dependencies": {
-		"angular": "~1.2.0",
-		"angular-animate": "~1.2.0",
-		"angular-route": "~1.2.0",
-		"angular-loader": "~1.2.0",
-		"angular-sanitize": "~1.2.0",
-		"angular-bootstrap": "~0.6.0",
-		"angular-moment": "latest",
-		"angular-translate": "~1.1.0",
-		"angularLocalStorage-nc": "latest",
-		"moment": "latest",
-		"array-sugar": "~0.1",
-		"json3": "~3.2.4",
-		"es5-shim": "~2.0.8",
-		"ng-tools": "latest",
-		"script.js": "latest",
-		"jquery": "~2.0.3",
-		"jquery-ui": "~1.10.3"
-	},
-	"devDependencies": {
-		"angular-mocks": "~1.2.0",
-		"angular-scenario": "~1.2.0"
-	},
-	"resolutions": {
-		"angular": "1.2.0-rc.2"
-	}
+  "name": "ean-boilerplate",
+  "version": "0.0.1",
+  "dependencies": {
+    "angular": "~1.2.0",
+    "angular-animate": "~1.2.0",
+    "angular-route": "~1.2.0",
+    "angular-loader": "~1.2.0",
+    "angular-sanitize": "~1.2.0",
+    "angular-bootstrap": "~0.6.0",
+    "angular-moment": "latest",
+    "angular-translate": "~1.1.0",
+    "angularLocalStorage-nc": "latest",
+    "moment": "latest",
+    "array-sugar": "~0.1",
+    "json3": "~3.2.4",
+    "es5-shim": "~2.0.8",
+    "ng-tools": "latest",
+    "script.js": "latest",
+    "jquery": "~2.0.3",
+    "angular-touch": "~1.2.0-rc.3",
+    "angular-gestures": "~0.1.1"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.0",
+    "angular-scenario": "~1.2.0"
+  },
+  "resolutions": {
+    "angular": "1.2.0-rc.2"
+  }
 }
