--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,8 @@
         "angular-gestures": "~0.1.1"
     },
     "devDependencies": {
-        "angular-mocks": "~1.2.0",
-        "angular-scenario": "~1.2.0"
+        "angular-mocks": "1.2.0-rc.2",
+        "angular-scenario": "1.2.0-rc.2"
     },
     "resolutions": {
         "angular": "1.2.0-rc.2"
