--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
         "grunt-contrib-copy": "latest",
         "grunt-text-replace": "latest",
         "grunt": "latest",
+		"grunt-angular-templates": "latest",
+		"load-grunt-tasks": "latest",
         "lodash": "latest"
     },
     "devDependencies": {
