--- a/bower.json
+++ b/bower.json
@@ -2,25 +2,28 @@
   "name": "ean-boilerplate",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "1.2.14",
-    "angular-animate": "1.2.14",
-    "angular-route": "1.2.14",
-    "angular-sanitize": "1.2.14",
+    "angular": "1.2.15",
+    "angular-animate": "1.2.15",
+    "angular-route": "1.2.15",
+    "angular-sanitize": "1.2.15",
     "angular-bootstrap": "~0.10",
     "angular-moment": "latest",
     "angularLocalStorage-nc": "latest",
     "moment": "latest",
-    "array-sugar": "~0.1",
-    "json3": "~3.2.4",
+    "array-sugar": "~0.2",
+    "json3": "~3.3",
     "es5-shim": "~2.3",
-    "ng-tools": "~0.0.3",
+    "ng-tools": "~0.2",
     "script.js": "latest",
     "jquery": "~2.1",
-    "angular-touch": "1.2.14",
+    "angular-touch": "1.2.15",
     "angular-gestures": "~0.2"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.14",
-    "angular-scenario": "1.2.14"
+    "angular-mocks": "1.2.15",
+    "angular-scenario": "1.2.15"
+  },
+  "resolutions": {
+    "angular": "1.2.15"
   }
 }
