expressjs 4.0 integrated, simple sitemap generation integrated

--- a/package.json
+++ b/package.json
@@ -17,14 +17,20 @@
         "test": "node node_modules/grunt-cli/bin/grunt test",
         "postinstall": "bower install"
     },
-    "env": "dev",
+    "env": "development",
     "port": 8080,
     "dependencies": {
         "array-sugar": "latest",
-        "express": "latest",
+        "express": "~4.0",
+        "sitemap": "~0.7",
         "async": "latest",
         "prerender-node": "latest",
         "winston": "latest",
+        "method-override": "1.0.0",
+        "body-parser": "1.0.2",
+        "morgan": "1.0.0",
+        "compression": "1.0.1",
+        "static-favicon": "1.0.2",
         "forever": "latest",
         "grunt-ng-annotate": "latest",
         "grunt-contrib-uglify": "latest",
