--- a/bower.json
+++ b/bower.json
@@ -2,25 +2,25 @@
   "name": "ean-boilerplate",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "1.2.17",
-    "angular-animate": "1.2.17",
-    "angular-route": "1.2.17",
-    "angular-sanitize": "1.2.17",
+    "angular": "1.2.20",
+    "angular-animate": "1.2.20",
+    "angular-route": "1.2.20",
+    "angular-sanitize": "1.2.20",
     "angular-bootstrap": "~0.10",
     "angular-moment": "latest",
     "angularLocalStorage-nc": "latest",
     "moment": "latest",
     "array-sugar": "~0.2",
     "json3": "~3.3",
-    "es5-shim": "~2.3",
-    "ng-tools": "~0.2",
     "script.js": "latest",
     "jquery": "~2.1",
-    "angular-touch": "1.2.17",
-    "angular-gestures": "~0.2"
+    "angular-touch": "1.2.20",
+    "angular-gestures": "~0.2",
+    "es5-shim": "4.0.0",
+    "ng-tools": "0.3.3"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.17",
-    "angular-scenario": "1.2.17"
+    "angular-mocks": "1.2.20",
+    "angular-scenario": "1.2.20"
   }
 }
