just some prepp work

--- a/package.json
+++ b/package.json
@@ -19,30 +19,33 @@
   "port": 8050,
   "dependencies": {
     "array-sugar": "latest",
-    "express": "~4.6",
-    "sitemap": "~0.7",
-    "prerender-node": "latest",
-    "winston": "~0.7",
-    "method-override": "~2.1",
-    "body-parser": "~1.4",
-    "morgan": "~1.2",
-    "compression": "~1.0",
-    "static-favicon": "~1.0",
-    "forever": "latest",
     "bitbucket-githook": "latest",
-    "grunt-ng-annotate": "latest",
-    "grunt-contrib-uglify": "latest",
-    "grunt-contrib-concat": "latest",
-    "grunt-contrib-watch": "latest",
-    "grunt-contrib-less": "latest",
-    "grunt-smg": "latest",
-    "grunt-concurrent": "latest",
-    "grunt-contrib-copy": "latest",
-    "grunt-text-replace": "latest",
+    "body-parser": "~1.4",
+    "browserify-ngannotate": "latest",
+    "compression": "~1.0",
+    "express": "~4.6",
+    "forever": "latest",
+    "glob": "^4.0.6",
     "grunt": "latest",
     "grunt-angular-templates": "latest",
+    "grunt-browserify": "latest",
+    "grunt-concurrent": "latest",
+    "grunt-contrib-concat": "latest",
+    "grunt-contrib-copy": "latest",
+    "grunt-contrib-less": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-watch": "latest",
+    "grunt-ng-annotate": "latest",
+    "grunt-text-replace": "latest",
     "load-grunt-tasks": "latest",
-    "lodash": "latest"
+    "lodash": "latest",
+    "method-override": "~2.1",
+    "morgan": "~1.2",
+    "prerender-node": "latest",
+    "require-globify": "^0.1.0",
+    "sitemap": "~0.7",
+    "static-favicon": "~1.0",
+    "winston": "~0.7"
   },
   "devDependencies": {
     "grunt-bump": "latest",
