--- a/bower.json
+++ b/bower.json
@@ -2,25 +2,27 @@
   "name": "ean-boilerplate",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "1.2.21",
-    "angular-animate": "1.2.21",
-    "angular-route": "1.2.21",
-    "angular-sanitize": "1.2.21",
+    "angular": "1.3.0-rc.2",
+    "angular-animate": "1.3.0-rc.2",
+    "angular-route": "1.3.0-rc.2",
+    "angular-sanitize": "1.3.0-rc.2",
     "angular-bootstrap": "~0.10",
     "angular-moment": "latest",
     "angularLocalStorage-nc": "latest",
     "moment": "latest",
     "array-sugar": "~0.2",
     "json3": "~3.3",
-    "script.js": "latest",
     "jquery": "~2.1",
-    "angular-touch": "1.2.21",
+    "angular-touch": "1.3.0-rc.2",
     "angular-gestures": "~0.2",
-    "es5-shim": "4.0.1",
-    "ng-tools": "0.3.3"
+    "es5-shim": "4.0.3",
+    "ng-tools": "0.4.2"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.21",
-    "angular-scenario": "1.2.21"
+    "angular-mocks": "1.3.0-rc.2",
+    "angular-scenario": "1.3.0-rc.2"
+  },
+  "resolutions": {
+    "angular": "1.3.0-rc.2"
   }
 }
