--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "jquery": "~2.1",
     "angular-touch": "1.3.0-rc.2",
     "angular-gestures": "~0.2",
-    "es5-shim": "4.0.3",
+    "es6-shim": "~0.18",
     "ng-tools": "0.4.2"
   },
   "devDependencies": {
