--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,6 @@
     "angular-animate": "1.3.0-rc.2",
     "angular-route": "1.3.0-rc.2",
     "angular-sanitize": "1.3.0-rc.2",
-    "angular-bootstrap": "~0.10",
     "angular-moment": "latest",
     "angularLocalStorage-nc": "latest",
     "moment": "latest",
@@ -16,7 +15,8 @@
     "angular-touch": "1.3.0-rc.2",
     "angular-gestures": "~0.2",
     "es6-shim": "~0.18",
-    "ng-tools": "0.4.2"
+    "ng-tools": "0.4.2",
+    "angular-bootstrap": "0.11.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3.0-rc.2",
