--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "method-override": "~2.1",
     "morgan": "~1.2",
     "prerender-node": "latest",
-    "require-globify": "^0.1.0",
+    "require-globify": "^0.4.0",
+    "require-stylify": "^0.3.0",
     "sitemap": "~0.7",
     "static-favicon": "~1.0",
     "uglifyify": "^2.5.0",
