--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prerender-node": "latest",
     "require-globify": "^0.4.0",
     "require-stylify": "^0.4.0",
+    "html2js-browserify": "latest",
     "sitemap": "~0.7",
     "static-favicon": "~1.0",
     "uglifyify": "^2.5.0",
