--- a/bower.json
+++ b/bower.json
@@ -2,27 +2,23 @@
   "name": "ean-boilerplate",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "1.3.0-rc.4",
-    "angular-animate": "1.3.0-rc.4",
-    "angular-route": "1.3.0-rc.4",
-    "angular-sanitize": "1.3.0-rc.4",
+    "angular-animate": "1.3.0-rc.5",
+    "angular-route": "1.3.0-rc.5",
+    "angular-sanitize": "1.3.0-rc.5",
     "angular-moment": "latest",
     "angularLocalStorage-nc": "latest",
     "moment": "latest",
-    "array-sugar": "~0.2",
+    "array-sugar": "latest",
     "json3": "~3.3",
     "jquery": "~2.1",
-    "angular-touch": "1.3.0-rc.4",
+    "angular-touch": "1.3.0-rc.5",
     "angular-gestures": "~0.2",
     "es6-shim": "~0.18",
     "ng-tools": "0.4.2",
     "angular-bootstrap": "0.11.0"
   },
   "devDependencies": {
-    "angular-mocks": "1.3.0-rc.4",
-    "angular-scenario": "1.3.0-rc.4"
-  },
-  "resolutions": {
-    "angular": "1.3.0-rc.4"
+    "angular-mocks": "1.3.0-rc.5",
+    "angular-scenario": "1.3.0-rc.5"
   }
 }
