--- a/public/package.json
+++ b/public/package.json
@@ -2,10 +2,10 @@
   "jspm": {
     "name": "ean-boilerplate",
     "dependencies": {
-      "lodash": "2.4.1",
-      "text": "^0.0.2",
       "moment": "^2.8.3",
-      "angular": "^1.3.0-rc.5"
+      "angular": "^1.3.0-rc.5",
+      "github:capaj/angular-moment": "^0.8.3",
+      "jquery": "^2.1.1"
     }
   }
 }
