karma-jspm finally working! even though I am not still content with having to spin up special http server just for tests, but for now it will do

--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "grunt": "latest",
     "grunt-angular-templates": "latest",
     "grunt-concurrent": "latest",
+    "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "latest",
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-text-replace": "latest",
+    "karma-chrome-launcher": "^0.1.5",
     "load-grunt-tasks": "latest",
     "lodash": "latest",
     "method-override": "~2.2",
