--- a/public/package.json
+++ b/public/package.json
@@ -5,7 +5,8 @@
       "moment": "^2.8.3",
       "angular": "^1.3.0-rc.5",
       "github:capaj/angular-moment": "^0.8.3",
-      "jquery": "^2.1.1"
+      "jquery": "^2.1.1",
+      "angular-mocks": "^1.3.0-rc.5"
     }
   }
 }
