--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "karma-chrome-launcher": "^0.1.5",
     "karma-jasmine": "^0.1.5",
     "karma-jspm": "^1.0.0",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "karma-phantomjs-launcher": "^0.1.4",
+    "grunt-contrib-less": "^0.11.4"
   }
 }
