--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,9 @@
 {
   "jspm": {
     "name": "ean-boilerplate",
+    "directories": {
+      "dist": "built"
+    },
     "dependencies": {
       "moment": "^2.8.3",
       "angular": "^1.3.0-rc.5",
