--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
       "angular": "^1.3.0",
       "github:capaj/angular-moment": "^0.8.3",
       "jquery": "^2.1.1",
-      "angular-mocks": "^1.3.0-rc.5"
+      "angular-mocks": "^1.3.0"
     }
   }
 }
