--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
     "configFile": "config.js",
     "dependencies": {
       "moment": "^2.8.3",
-      "angular": "^1.3.0",
       "github:capaj/angular-moment": "^0.8.3",
       "jquery": "^2.1.1",
-      "angular-mocks": "^1.3.0"
+      "angular-mocks": "^1.3.0",
+      "angular": "^1.3.0"
     }
   }
 }
