--- a/package.json
+++ b/package.json
@@ -58,16 +58,16 @@
   "jspm": {
     "name": "ean-boilerplate",
     "directories": {
-      "dist": "built",
-      "baseURL": "public"
+      "baseURL": "public",
+      "dist": "built"
     },
     "configFile": "config.js",
     "dependencies": {
-      "moment": "^2.8.3",
+      "angular": "^1.3.2",
+      "angular-mocks": "^1.3.2",
       "github:capaj/angular-moment": "^0.8.3",
       "jquery": "^2.1.1",
-      "angular-mocks": "^1.3.0",
-      "angular": "^1.3.0"
+      "moment": "^2.8.3"
     }
   }
 }
