--- a/package.json
+++ b/package.json
@@ -46,14 +46,15 @@
     "winston": "~0.8"
   },
   "devDependencies": {
+    "connect-livereload": "^0.5.0",
     "grunt-bump": "latest",
     "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-less": "^0.11.4",
     "grunt-karma": "~0.9",
     "karma-chrome-launcher": "^0.1.5",
     "karma-jasmine": "^0.1.5",
     "karma-jspm": "^1.0.1",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "grunt-contrib-less": "^0.11.4"
+    "karma-phantomjs-launcher": "^0.1.4"
   },
   "jspm": {
     "name": "ean-boilerplate",
